feat: Support for sending and reading UTF-8, Base64, and Hex encoding
- Support for sending and reading UTF-8, Base64, and Hex encoding.
- Optimize the code.
- Add complete examples.

--- a/example/capacitor.config.json
+++ b/example/capacitor.config.json
@@ -1,11 +1,10 @@
 {
-  "appId": "com.example.plugin",
-  "appName": "example",
-  "bundledWebRuntime": false,
+  "appId": "com.svend.capacitor.tcp.example",
+  "appName": "TCP Example",
   "webDir": "dist",
   "plugins": {
     "SplashScreen": {
-      "launchShowDuration": 0
+      "launchAutoHide": false
     }
   }
 }
